fix: Fix hover color for essentials on dark mode, b=no-bug, c=common, tabs

--- a/src/zen/common/styles/zen-popup.css
+++ b/src/zen/common/styles/zen-popup.css
@@ -359,7 +359,7 @@ menuseparator {
       color-mix(in srgb, var(--zen-primary-color) 85%, #0f0f0f 15%)
     );
     box-shadow: 0 0 14px 3px rgba(0, 0, 0, 0.05);
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: none;
     display: flex;
     font-weight: 600;
     align-items: center;
